Fixed alignment of each post's tags on main feed, made tags editable in edit post view

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -765,7 +765,13 @@ strong {
 .tagLabel {
   display: inline-block;
   float: left;
+  margin-right: 5px;
 }
+
+.postTagList {
+  margin-top: 0;
+}
+
 
 //Vote Section///
 
